# cpp_hw

./: CMakeLists.txt  README.md
task1/: CMakeLists.txt
task1/.res/: in.txt  out.txt
task1/UserGroupLib/: CMakeLists.txt
task1/UserGroupLib/include/: Group.hpp  Manager.hpp  User.hpp
task1/UserGroupLib/src/: Group.cpp  Manager.cpp  User.cpp
task1/main/: App.cpp  App.hpp  CmakeLists.txt  main.cpp
task2/: CMakeLists.txt  TypeList.hpp  main.cpp
task3/: CMakeLists.txt  TypeList.hpp  TypeMap.hpp  main.cpp
task4/: CMakeLists.txt
task4/src/: main.cpp
task5/: CMakeLists.txt  main.cpp
task6/: CMakeLists.txt  main.cpp
task7/: CMakeLists.txt  HashSetImpl.hpp  LightSetImpl.hpp  Set.hpp  SetImpl.hpp  main.cpp
task8/: CMakeLists.txt  Expression.hpp  ExpressionFactory.hpp  Operators.hpp  main.cpp
